; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_e2100.c_mem_off.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_e2100.c_mem_off.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@E21_MEM_ENABLE = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i16)* @mem_off to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mem_off(i16 signext %0) #0 {
  %2 = alloca i16, align 2
  store i16 %0, i16* %2, align 2
  %3 = load i16, i16* %2, align 2
  %4 = sext i16 %3 to i64
  %5 = load i64, i64* @E21_MEM_ENABLE, align 8
  %6 = add nsw i64 %4, %5
  %7 = call i32 @inb(i64 %6)
  %8 = load i16, i16* %2, align 2
  %9 = sext i16 %8 to i64
  %10 = load i64, i64* @E21_MEM_ENABLE, align 8
  %11 = add nsw i64 %9, %10
  %12 = call i32 @outb(i32 0, i64 %11)
  ret void
}

declare dso_local i32 @inb(i64) #1

declare dso_local i32 @outb(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
